--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <br><br><br><br>
                     <div class="row g-0" id="head">
                         <div class="coll">
-                            <a href="https://www.saveetha.ac.in/" target="blank__"><img src="Images/saveetha.jpg" alt="saveetha logo" width="520" height="100" border="0"></a>
+                            <a href="https://www.saveetha.ac.in/" target="blank__"><img src="Images/saveetha.png" alt="saveetha logo" width="520" height="100" border="0"></a>
                             <br><br>
                         </div>
                         
