--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                     <li>The paper must include an Abstract (not more than 150 words) and 3-5 Keywords.</li>
                     <li>Author's autobiographical details should appear as the first footnote of each contribution, and include the name, academic and professional qualifications, institutional affiliation, current title and position of each author.</li>
                     <li>Full paper must be in Times New Roman (normal style and font size 12) and in MS-Word. The page size should be A4, single column with 2.5 cm margin on both sides with single line spacing. All pages of the manuscript (including Tables and Figures) should be numbered.</li>
-                    <li>The submissions will be double-blind refereed. After this, the authors will be intimated about the further process of publication in the journal after.</li>
+                    <li>The submissions will be double-blind refereed. After this, the authors will be intimated about the further process of publication in the journal.</li>
                 </ul>
                 <p><strong class="guide">Template:</strong>&nbsp;&nbsp;&nbsp;
                 <a class="btn btn-primary btn-sm" href="https://www.ieee.org/conferences/publishing/templates.html" target="blank__"><b style="font-size: large;">Click here</b></a><br>Use this link to download the template for paper submission.<br>List of selected papers (To be updated after selection)</p>
