--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiped-events@1.1.6/src/swiped-events.min.js"></script>
-
+<link rel="shortcut icon" href="Images/secico.png" type="image/x-icon" width="100" height="100">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:ital,wght@1,500&family=Josefin+Sans:wght@700&family=Marcellus+SC&family=Montserrat:ital,wght@1,900&display=swap" rel="stylesheet">
 </head>
 <body style="  background-color: #e7e9f0;color: black;">
-    <!--
+   
     <div id="preloader">
         <ul>
         <li></li>
@@ -25,7 +25,7 @@
         <li></li>
         <li></li>
         </ul>
-    </div>  -->
+    </div>  
    <div id="load-hide">
             <section id="title">
 
