--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:ital,wght@1,500&family=Josefin+Sans:wght@700&family=Marcellus+SC&family=Montserrat:ital,wght@1,900&display=swap" rel="stylesheet">
 </head>
 <body style="  background-color: #e7e9f0;color: black;">
-    <!--
+   
     <div id="preloader">
         <ul>
         <li></li>
@@ -25,7 +25,7 @@
         <li></li>
         <li></li>
         </ul>
-    </div>  -->
+    </div>  
     <div id="load-hide">
                 <section id="title">
 
