--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" href="Template.docx" target="blank__">Download Template</a></li>
                                     <li><a class="dropdown-item" href="https://easychair.org/conferences/?conf=icem22" target="blank__">Easy Chair</a></li>
-                                    <li><a class="dropdown-item" href="#Guidelines">List of Journals</a></li>
+                                    <li><a class="dropdown-item" href="#journals">List of Journals</a></li>
                                     </ul>
                                 </li>
                                 <li class="nav-item">
